# MUPOL-Plaintext

./: .gitignore  README.md  instance_generator.py  instance_reader.py  prio_json.py  pyproject.toml
config/: config.ini
mupol/plaintext/: args_handler.py  main.py
mupol/plaintext/freighters_day_planning/: freighter.py  map.py  order.py  problem.py  random_problem_generator.py  simple_solver.py  truck.py  truck_drive.py
