[tool.poetry]
name = "mupol-plaintext"
version = "0.3.3"
description = "Plaintext version of the MUPOL demonstrator, written in Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mupol"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
tqdm = "^4.66.5"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
